--- a/node/modules/ads/Cargo.toml
+++ b/node/modules/ads/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 # third-party dependencies
-codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
 integer-sqrt = { version = "0.1.2" }
 safe-mix = { version = "1.0", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
@@ -16,17 +16,17 @@ serde = { version = "1.0.102", optional = true }
 did = { path = "../did", default-features = false }
 
 # primitives
-node-primitives = { version = "2.0.0", path = "../../primitives", default-features = false }
-sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
-sp-std = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
-sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2",default-features = false }
-sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
+node-primitives = { version = "2.0.0-alpha.2", path = "../../primitives", default-features = false }
+sp-core = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-std = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-runtime = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git",default-features = false }
+sp-io = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
 
 # frame dependencies
-pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
-frame-support = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
-frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
-pallet-timestamp = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
+pallet-balances = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
+frame-support = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
+frame-system = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
+pallet-timestamp = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
 
 [dev-dependencies]
 
