--- a/node/primitives/Cargo.toml
+++ b/node/primitives/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
 name = "node-primitives"
-version = "2.0.0"
+version = "2.0.0-alpha.3"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
+license = "GPL-3.0"
+homepage = "https://substrate.dev"
+repository = "https://github.com/paritytech/substrate/"
 
 [dependencies]
-sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-core = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 
 [dev-dependencies]
-sp-serializer = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-serializer = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
 pretty_assertions = "0.6.1"
 
 [features]
