--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -1,83 +1,87 @@
 [package]
 name = "node-runtime"
-version = "2.0.0"
+version = "2.0.0-alpha.3"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 build = "build.rs"
+license = "GPL-3.0"
+homepage = "https://substrate.dev"
+repository = "https://github.com/paritytech/substrate/"
 
 [dependencies]
 # third-party dependencies
-codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
 integer-sqrt = { version = "0.1.2" }
-safe-mix = { version = "1.0", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
-serde = { version = "1.0.103", features = ["derive"], optional = true }
+serde = { version = "1.0.102", features = ["derive"], optional = true }
 simple-json = { version = '0.1.3', git = "https://github.com/jingleizhang/simple-json.git", default-features = false }
 hex = { version = "0.4.0", default-features = false }
 num-bigint-dig = { version = "0.6.0", default-features = false}
 num-traits = { version = "0.2.4", default-features = false}
 
 # primitives
-sp-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-consensus-babe = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-block-builder = { git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false}
-sp-inherents = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-node-primitives = { version = "2.0.0", path = "../primitives", default-features = false }
-sp-offchain = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-staking = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-keyring = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
+sp-authority-discovery = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-consensus-babe = { version = "0.8.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-block-builder = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false}
+sp-inherents = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+node-primitives = { version = "2.0.0-alpha.2", path = "../primitives", default-features = false }
+sp-offchain = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-std = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-api = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-staking = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-keyring = { version = "2.0.0-alpha.2", optional = true, git = "https://github.com/ProChain/substrate.git" }
+sp-session = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-transaction-pool = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-version = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
 
 # frame dependencies
-frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-authorship = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-babe = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-balances = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-collective = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-contracts = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-contracts-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-democracy = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-elections-phragmen = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-finality-tracker = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-grandpa = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-indices = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-identity = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-membership = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-offences = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-randomness-collective-flip = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-session = { version = "2.0.0", features = ["historical"], git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
-pallet-staking = { version = "2.0.0", features = ["migrate"], git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2", default-features = false }
-pallet-staking-reward-curve = { version = "2.0.0",  git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-sudo = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-treasury = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-utility = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-transaction-payment = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+frame-executive = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-benchmarking = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git", optional = true }
+frame-support = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-system-rpc-runtime-api = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-authority-discovery = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-authorship = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-babe = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-balances = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-collective = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts-primitives = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts-rpc-runtime-api = { version = "0.8.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-democracy = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-elections-phragmen = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-finality-tracker = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-grandpa = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-im-online = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-identity = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-membership = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-offences = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-randomness-collective-flip = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-session = { version = "2.0.0-alpha.2", features = ["historical"], git = "https://github.com/ProChain/substrate.git", default-features = false }
+pallet-staking = { version = "2.0.0-alpha.2", features = ["migrate"], git = "https://github.com/ProChain/substrate.git", default-features = false }
+pallet-staking-reward-curve = { version = "2.0.0-alpha.2",  git = "https://github.com/ProChain/substrate.git" }
+pallet-sudo = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-treasury = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-utility = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 
 # inner dependencies
 did = { path = "../modules/did", default-features = false }
 ads = { path = "../modules/ads", default-features = false }
-prices = { path = "../modules/prices", default-features = false }
-utilities = { path = "../modules/utilities", default-features = false }
+#prices = { path = "../modules/prices", default-features = false }
+#utilities = { path = "../modules/utilities", default-features = false }
 
 [build-dependencies]
-wasm-builder-runner = { version = "1.0.4", package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git" }
 
 [dev-dependencies]
-sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+#sp-io = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
 
 [features]
 default = ["std"]
@@ -91,8 +95,9 @@ std = [
 	"sp-block-builder/std",
 	"codec/std",
 	"pallet-collective/std",
-	"pallet-contracts-rpc-runtime-api/std",
 	"pallet-contracts/std",
+	"pallet-contracts-primitives/std",
+	"pallet-contracts-rpc-runtime-api/std",
 	"pallet-democracy/std",
 	"pallet-elections-phragmen/std",
 	"frame-executive/std",
@@ -110,7 +115,6 @@ std = [
 	"pallet-randomness-collective-flip/std",
 	"sp-std/std",
 	"rustc-hex",
-	"safe-mix/std",
 	"serde/std",
 	"pallet-session/std",
 	"simple-json/std",
@@ -122,6 +126,7 @@ std = [
 	"sp-session/std",
 	"pallet-sudo/std",
 	"frame-support/std",
+	"frame-benchmarking/std",
 	"frame-system-rpc-runtime-api/std",
 	"frame-system/std",
 	"pallet-timestamp/std",
@@ -133,6 +138,10 @@ std = [
 	"sp-version/std",
 	"did/std",
 	"ads/std",
-	"prices/std",
-	"utilities/std"
+]
+runtime-benchmarks = [
+	"frame-benchmarking",
+	"pallet-timestamp/runtime-benchmarks",
+	"pallet-identity/runtime-benchmarks",
+	"pallet-balances/runtime-benchmarks",
 ]
