--- a/node/testing/Cargo.toml
+++ b/node/testing/Cargo.toml
@@ -1,32 +1,59 @@
 [package]
 name = "node-testing"
-version = "2.0.0"
+version = "2.0.0-alpha.3"
 authors = ["Parity Technologies <admin@parity.io>"]
 description = "Test utilities for Substrate node."
 edition = "2018"
+license = "GPL-3.0"
+homepage = "https://substrate.dev"
+repository = "https://github.com/paritytech/substrate/"
+publish = true
 
 [dependencies]
-pallet-balances = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sc-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-codec = { package = "parity-scale-codec", version = "1.0.0" }
-pallet-contracts = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-grandpa = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-indices = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-keyring = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-node-executor = { version = "2.0.0", path = "../executor" }
-node-primitives = { version = "2.0.0", path = "../primitives" }
-node-runtime = { version = "2.0.0", path = "../runtime" }
-sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-io = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-frame-support = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-session = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-staking = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-sc-executor = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-frame-system = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-substrate-test-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-timestamp = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
-pallet-treasury = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+pallet-balances = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sc-client = { version = "0.8.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sc-client-db = { version = "0.8.0-alpha.2", git = "https://github.com/ProChain/substrate.git", features = ["kvdb-rocksdb"] }
+sc-client-api = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+codec = { package = "parity-scale-codec", version = "1.2.0" }
+pallet-contracts = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+pallet-grandpa = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sp-keyring = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+node-executor = { version = "2.0.0-alpha.2", path = "../executor" }
+node-primitives = { version = "2.0.0-alpha.2", path = "../primitives" }
+node-runtime = { version = "2.0.0-alpha.2", path = "../runtime" }
+sp-core = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+frame-support = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+pallet-session = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+pallet-society = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+pallet-staking = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sc-executor = { version = "0.8.0-alpha.2", git = "https://github.com/ProChain/substrate.git", features = ["wasmtime"] }
+sp-consensus = { version = "0.8.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+substrate-test-client = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+pallet-treasury = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
 wabt = "0.9.2"
+sp-api = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sp-finality-tracker = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-timestamp = { version = "2.0.0-alpha.2", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-block-builder = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sc-block-builder = { version = "0.8.0-alpha.3", git = "https://github.com/ProChain/substrate.git" }
+sp-inherents = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sp-blockchain = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+log = "0.4.8"
+tempfile = "3.1.0"
+fs_extra = "1"
 hex-literal = "0.2.1"
+
+[dev-dependencies]
+criterion = "0.3.0"
+sc-cli = { version = "0.8.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
+sc-service = { version = "0.8.0-alpha.2", git = "https://github.com/ProChain/substrate.git", features = ["rocksdb"] }
+
+[[bench]]
+name = "import"
+harness = false
