--- a/utils/chain-spec-builder/Cargo.toml
+++ b/utils/chain-spec-builder/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
 name = "chain-spec-builder"
-version = "2.0.0"
+version = "2.0.0-alpha.3"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 build = "build.rs"
+license = "GPL-3.0"
+homepage = "https://substrate.dev"
+repository = "https://github.com/paritytech/substrate/"
 
 [dependencies]
 ansi_term = "0.12.1"
-sc-keystore = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sc-keystore = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
 node-cli = { path = "../../node/cli" }
-sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
+sp-core = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git" }
 rand = "0.7.2"
-structopt = "=0.3.7"
+structopt = "0.3.8"
